# usch

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.markdown  README.md  TODO.MarkDown  TODO.markdown  TODO.md  debian_build.sh  debugbuild_and_test.sh  eval.c  eval.h  fakeshell.c  minunit.h  minunit_example.c  pmcurses.c  pmcurses.h  releasebuild.sh  repl.c  shell.c  test_num_args.c  tests.c  usch.h  usch_eval.c  usch_eval.h  uschscript.inl  uschshell.c  uschshell.h
debian/: changelog  control  files  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  package.default.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  usch.cron.d.ex  usch.doc-base.EX  watch.ex
debian/usch/DEBIAN/: control  md5sums
debian/usch/usr/share/doc/usch/: copyright
interpreter/: CMakeLists.txt  linenoise_main.c
js/: jr.js
libcrepl/: CMakeLists.txt  bufstr.c  bufstr.h  crepl.c  crepl.h  crepl_complete.c  crepl_debug.h  crepl_eval.c  crepl_linker.c  crepl_parser.c  crepl_types.h  crepl_vars.c  strutils.c  strutils.h  usch.h  uschrc.h
src/: Makefile  bufstr.c  crepl.c  crepl.h  crepl_debug.h  crepl_eval.c  crepl_linker.c  crepl_parser.c  crepl_parser.h  crepl_types.h  crepl_vars.c  example_uschrc.h  linenoise_main.c  minunit.h  parserutils.c  parserutils.h  pmcurses.c  pmcurses.h  readline_helper.c  shell.c  strutils.c  strutils.h  test_num_args.c  tests.c  usch.h  usch_debug.h  uschrc.h  uschshell.c  uschshell.h  uschshell_eval.c  uschshell_linker.c  uschshell_parser.c  uschshell_parser.h  uschshell_types.h  uschshell_vars.c
test/: CMakeLists.txt  test_complete.h  tests.c
themes/: code.css  default.css  github-markdown.css
usch_h/: usch.h
